--- a/themes/.themes/Everforest-Dark-BL-GS/gnome-shell/gnome-shell.css
+++ b/themes/.themes/Everforest-Dark-BL-GS/gnome-shell/gnome-shell.css
@@ -2165,7 +2165,8 @@ StScrollBar StButton#hhandle:active {
 }
 
 .cycler-highlight {
-  border: 5px solid #7fbbb3;
+  border: 3px solid #7fbbb3;
+  border-radius: 12px;
 }
 
 /* Switches */
